# computational-geometry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
convex-hull/: CMakeLists.txt
convex-hull/scripts/: convex_hull.py
convex-hull/src/: CMakeLists.txt  main.cpp
scripts/: template_gen.py
source/convex-hull/: CMakeLists.txt
source/convex-hull/src/: convex_hull.cpp
source/segment-intersections/: CMakeLists.txt
source/segment-intersections/src/: segment_intersections.cpp  segment_intersections.h
